Weird bug on mobile only

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ button{
   padding-left: 10px;
 }
 
-.navbar-text {
+div.navbar-text {
   position:static;
   color:rgba(255, 255, 255, 1.0);
   text-decoration: none;
